--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 		<div id='index'>
 			<div class='container'>
 				<div class='top'>
-					<p><strong><a href='/' style='color: black;'>{{ site.title }}</a></strong></p>
+					<p><strong><a href='/' style='color: black;'>Tom HACKSHAW</a></strong></p>
 				</div>
 				{% for section in site.categories.section %}
 					<ul class='section' id='section_{{ section.id }}'>
@@ -45,7 +45,7 @@
 				{%  endfor %}
 				<div class='bot'><p>Creado por:<br />
 				<a href='http://twitter.com/{{site.twitter}}'>{{site.author}}</a></p>
-				<p><a href='https://github.com/colaborativa/Jekyllxhibit'>Desarrollado con Jekyllxhibit</a></p></div>
+				<p>Built with <a href='https://github.com/colaborativa/Jekyllxhibit'>Jekyllxhibit</a></p></div>
 			</div>
 		</div>
 		{% if page.title == 'index' %}
