--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,10 @@
 				{% endif %}
 			{%  endfor %}
 		{% else %}
-			<title>{{page.title}}</title>
+			<title>TOM HACKSHAW</title>
 			<meta name='description' content="{{page.content | truncate: 50 }}" />
 		{% endif %}
-		<meta name='author' content="{{ site.author }}" />
+		<meta name='author' content="Tom Hackshaw" />
 		<meta name='copyright' content="" />
 		<meta name='Robots' content="INDEX,FOLLOW" />
 		<meta name='Revisit-after' content="1 Day" />
