--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
 						</li>
 					</ul>
 				{%  endfor %}
-				<div class='bot'><p>Creado por:<br />
-				<a href='http://twitter.com/{{site.twitter}}'>{{site.author}}</a></p>
+				<div class='bot'><p>About + Contact<br />
+				<a href='http://twitter.com/tomhackshaw'>{{site.author}}</a></p>
 				<p>Built with <a href='https://github.com/colaborativa/Jekyllxhibit'>Jekyllxhibit</a></p></div>
 			</div>
 		</div>
