--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 				{% endif %}
 			{%  endfor %}
 		{% else %}
-			<title>TOM HACKSHAW</title>
+			<title>HACKSHAW</title>
 			<meta name='description' content="{{page.content | truncate: 50 }}" />
 		{% endif %}
 		<meta name='author' content="Tom Hackshaw" />
