--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
 			{%  endfor %}
 		{% else %}
 			<title>HACKSHAW</title>
-			<meta name='description' content="{{page.content | truncate: 50 }}" />
+			<meta name='description' content="The website of Tom Hackshaw, an interdisciplinary artist based in Auckland, New Zealand" />
 		{% endif %}
-		<meta name='author' content="Tom Hackshaw" />
+		<meta name="keywords" content="tom hackshaw, tomhackshaw, art, tom, nz, " />
 		<meta name='copyright' content="" />
 		<meta name='Robots' content="INDEX,FOLLOW" />
 		<meta name='Revisit-after' content="1 Day" />
