--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 			<title>HACKSHAW</title>
 			<meta name='description' content="The website of Tom Hackshaw, an interdisciplinary artist based in Auckland, New Zealand" />
 		{% endif %}
+		<meta name='description' content="The website of Tom Hackshaw, an interdisciplinary artist based in Auckland, New Zealand" />
 		<meta name="keywords" content="tom hackshaw, tomhackshaw, art, tom, nz, " />
 		<meta name='copyright' content="" />
 		<meta name='Robots' content="INDEX,FOLLOW" />
