--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 				{% endif %}
 			{%  endfor %}
 		{% else %}
-			<title>HACKSHAW</title>
+			<title>Tom Hackshaw</title>
 			<meta name='description' content="The website of Tom Hackshaw, an interdisciplinary artist based in Auckland, New Zealand" />
 		{% endif %}
 		<meta name='description' content="The website of Tom Hackshaw, an interdisciplinary artist based in Auckland, New Zealand" />
