--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 				{%  endfor %}
 				<div class='bot'><p><br />
 				<a href='http://twitter.com/tomhackshaw'>About + Contact</a></p>
-				<a href='http://twitter.com/tomhackshaw'>tumblr</a></p>
+				<a href='http://twitter.com/tomhackshaw'>Tumblr</a></p>
 				<p>Built with <a href='https://github.com/colaborativa/Jekyllxhibit'>Jekyllxhibit</a></p></div>
 			</div>
 		</div>
