--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 		<div id='index'>
 			<div class='container'>
 				<div class='top'>
-					<p><strong><a href='/' style='color: black;'>TOM HACKSHAW</a></strong></p>
+					<p><strong><a href='/' style='color: black;'>Tom Hackshaw</a></strong></p>
 				</div>
 				{% for section in site.categories.section %}
 					<ul class='section' id='section_{{ section.id }}'>
