--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,8 +48,7 @@
 				<div class='bot'><p><br />
 				<a href='http://twitter.com/tomhackshaw'>About + Contact</a></p>
 				<a href='http://twitter.com/tomhackshaw'>Tumblr</a></p>
-				<a href='https://twitter.com/tomhackshaw' class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @tomhackshaw</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+				<a href='https://twitter.com/tomhackshaw' class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @tomhackshaw</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 				<p>Built with <a href='https://github.com/colaborativa/Jekyllxhibit'>Jekyllxhibit</a></p></div>
 			</div>
 		</div>
