--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,8 +47,8 @@
 				{%  endfor %}
 				<div class='bot'><p><br />
 				<a href='http://twitter.com/tomhackshaw'>About + Contact</a></p>
-				<a href='http://twitter.com/tomhackshaw'>Tumblr</a></p>
-				<a href='https://twitter.com/tomhackshaw' class="twitter-follow-button" data-show-count="false" data-size="small" data-dnt="true">Follow @tomhackshaw</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+				<a href='http://tumblr.tomhackshaw.com'>Tumblr</a></p>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/CC-BY_icon.svg/88px-CC-BY_icon.svg.png"><br>This work is licensed under a <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution International License.</a>
 				<br><br>
 				<br><br>
 				<p>Built with <a href='https://github.com/colaborativa/Jekyllxhibit'>Jekyllxhibit</a></p></div>
