--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,10 @@
 				<div class='bot'><p><br />
 				<a href='http://twitter.com/tomhackshaw'>About + Contact</a></p>
 				<a href='http://tumblr.tomhackshaw.com'>Tumblr</a></p>
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/CC-BY_icon.svg/88px-CC-BY_icon.svg.png"><br>This work is licensed under a <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution International License.</a>
+				<br><br>
+				<p>Copyright 2015</p>
+				<br><br>
+				<img src="https://i.creativecommons.org/l/by/4.0/80x15.png"><br>This work is licensed under a <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution International License.</a>
 				<br><br>
 				<br><br>
 				<p>Built with <a href='https://github.com/colaborativa/Jekyllxhibit'>Jekyllxhibit</a></p></div>
