--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 					</ul>
 				{%  endfor %}
 				<div class='bot'><p><br />
-				<a href='http://twitter.com/tomhackshaw'>About + Contact</a></p>
+				<a href='/about'>About + Contact</a></p>
 				<a href='http://tumblr.tomhackshaw.com'>Tumblr</a></p>
 				<br><br>
 				<p>Copyright 2015</p>
