--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
 				<div class='bot'><p><br />
 				<a href='/about'>About + Contact</a></p>
 				<a href='http://tumblr.tomhackshaw.com'>Tumblr</a></p>
+				<a href='/help'>Feeling down?</a></p>
 				<br><br>
 				<p>Copyright 2015</p>
 				<img src="https://i.creativecommons.org/l/by/4.0/80x15.png"><br>This work is licensed under a <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution International License.</a>
