--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 				{%  endfor %}
 				<div class='bot'><p><br />
 				<a href='/about'>About + Contact</a></p>
-				<a href='http://tomhackshaw.tumblr.com'>Tumblr</a></p>
+				<a href='http://tumblr.tomhackshaw.com'>Tumblr</a></p>
 				<a href='/help'>Feeling down?</a></p>
 				<br><br>
 				<p>Copyright 2015</p>
